Hospital Management System/force-app/main/default/objects/Medication__c/Medication__c.object-meta.xml
<CustomObject>
    <description>Line-item level medication details belonging to a prescription.
Used for dosage tracking, pricing, and billing calculations.</description>
    <label>Medication</label>
    <nameField>
        <label>Medication Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>