Hospital Management System/force-app/main/default/objects/Medication__c/fields/Line_Total__c.field-meta.xml
<CustomField>
    <fullName>Line_Total__c</fullName>
    <description>Auto-calculated total cost for this medication line item.</description>
    <formula>Unit_Price__c * Quantity__c * Duration_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>