Hospital Management System/force-app/main/default/objects/Medication__c/fields/Prescription__c.field-meta.xml
<CustomField>
    <fullName>Prescription__c</fullName>
    <description>Parent prescription to which this medication belongs.</description>
    <label>Prescription</label>
    <referenceTo>Prescription__c</referenceTo>
    <relationshipLabel>Medications</relationshipLabel>
    <relationshipName>Medications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>